kubernetes/simple/app/services.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: osm-simple-app
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: osm-simple-app
spec:
  ports:
    - port: 80
      name: api-port
  selector:
    app: api
